[gd_scene load_steps=3 format=3 uid="uid://bnk44q8p727j5"]

[ext_resource type="Script" path="res://Multijugadro_Menu.gd" id="1_hrdkx"]
[ext_resource type="FontFile" uid="uid://b5glysunhn2en" path="res://Menu/Retro Gaming.ttf" id="2_ymnxd"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hrdkx")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.141176, 0.141176, 0.141176, 0.505882)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -286.0
offset_top = -225.5
offset_right = 286.0
offset_bottom = 225.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ymnxd")
theme_override_font_sizes/font_size = 30
text = "Indique su nombre de usuario:
- Sólo carácteres alfanuméricos 
Números del 0 al 9 y letras de la A a la Z (ignorando tildes y espacios)."

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ymnxd")
theme_override_font_sizes/font_size = 25

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 835.0
offset_top = 700.0
offset_right = 1085.0
offset_bottom = 800.0
theme_override_fonts/font = ExtResource("2_ymnxd")
theme_override_font_sizes/font_size = 30
text = "Regresar"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 1610.0
offset_top = 1.0
offset_right = 1919.0
offset_bottom = 389.0

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ymnxd")
theme_override_font_sizes/font_size = 30
text = "TOP PUNTAJES"

[node name="Label2" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ymnxd")
theme_override_font_sizes/font_size = 25

[node name="Timer2" type="Timer" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
